# chain-simulator

./: .gitignore  .pre-commit-config.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: docs.yml  tests.yml
changelog/: +random.removal  1.bugfix  11.doc.txt  12.doc.txt  14.doc.txt  18.bugfix  19.doc.txt  21.removal  27.feature  28.feature  7.removal  8.removal  towncrier_template.rst.jinja
docs/source/: api.rst  api_reference.rst  changelog.rst  conf.py  index.rst  utilities.rst
docs/source/benchmarks/: basic_matrix_info.ipynb  density_change.ipynb  format_conversions.ipynb  matmul_matrix_matrix.ipynb  matmul_vector_matrix.ipynb  memory_footprints.ipynb
docs/source/benchmarks/data/arithmetic_matrix_matrix/transition_matrix_acyclic/: cpu_csc_multiply_once.parquet  cpu_csc_multiply_once_metadata.json  cpu_csr_multiply_once.parquet  cpu_csr_multiply_once_metadata.json  gpu_coo_multiply_iteratively.parquet  gpu_coo_multiply_iteratively_metadata.json  gpu_csc_multiply_iteratively.parquet  gpu_csr_multiply_iteratively.parquet
docs/source/benchmarks/data/arithmetic_matrix_matrix/transition_matrix_cyclic/: cpu_bsr_multiply_once.parquet  cpu_csc_multiply_once.parquet  gpu_csc_multiply_iteratively.parquet  gpu_csc_multiply_iteratively_metadata.json  gpu_csr_multiply_iteratively_metadata.json
docs/source/benchmarks/data/arithmetic_matrix_matrix_128/transition_matrix_acyclic/: cpu_bsr_multiply_once.parquet  cpu_bsr_multiply_once_metadata.json  cpu_csc_multiply_once.parquet  cpu_csc_multiply_once_metadata.json  cpu_csr_multiply_once.parquet  cpu_csr_multiply_once_metadata.json
docs/source/benchmarks/data/arithmetic_matrix_matrix_128/transition_matrix_cyclic/: cpu_bsr_multiply_once.parquet  cpu_bsr_multiply_once_metadata.json  cpu_csc_multiply_once.parquet  cpu_csc_multiply_once_metadata.json  cpu_csr_multiply_once.parquet  cpu_csr_multiply_once_metadata.json
docs/source/benchmarks/data/arithmetic_vector_matrix/transition_matrix_acyclic/: cpu_bsr_multiply_iteratively_metadata.json  cpu_bsr_multiply_once.parquet  cpu_csc_multiply_once_metadata.json  cpu_csr_multiply_iteratively.parquet  cpu_csr_multiply_iteratively_metadata.json  cpu_csr_multiply_once.parquet  gpu_coo_multiply_once.parquet  gpu_coo_multiply_once_metadata.json  gpu_csc_multiply_iteratively.parquet  gpu_csc_multiply_iteratively_metadata.json  gpu_csc_multiply_once.parquet  gpu_csr_multiply_iteratively.parquet  gpu_csr_multiply_once.parquet  gpu_csr_multiply_once_metadata.json
docs/source/benchmarks/data/arithmetic_vector_matrix/transition_matrix_cyclic/: cpu_bsr_multiply_iteratively_metadata.json  cpu_csc_multiply_iteratively.parquet  cpu_csc_multiply_once_metadata.json  cpu_csr_multiply_once.parquet  gpu_coo_multiply_iteratively.parquet  gpu_coo_multiply_once.parquet  gpu_csc_multiply_iteratively.parquet  gpu_csc_multiply_once_metadata.json  gpu_csr_multiply_once.parquet  gpu_csr_multiply_once_metadata.json
docs/source/benchmarks/data/basic_matrix_info/: basic_matrix_info.parquet
docs/source/benchmarks/data/density_change/: density_change.parquet
docs/source/benchmarks/data/matmul_matrix_matrix/dairy_cow_acyclic/: cpu_bsr_multiply_once.parquet  cpu_bsr_multiply_once_metadata.json  gpu_csc_multiply_iteratively_metadata.json  gpu_csr_multiply_iteratively_metadata.json
docs/source/benchmarks/data/matmul_matrix_matrix/dairy_cow_cyclic/: cpu_bsr_multiply_once_metadata.json  cpu_csc_multiply_once_metadata.json  cpu_csr_multiply_once.parquet  cpu_csr_multiply_once_metadata.json  gpu_coo_multiply_iteratively.parquet  gpu_coo_multiply_iteratively_metadata.json  gpu_csr_multiply_iteratively.parquet
docs/source/benchmarks/data/matmul_vector_matrix/dairy_cow_acyclic/: cpu_bsr_multiply_iteratively.parquet  cpu_bsr_multiply_once_metadata.json  cpu_csc_multiply_iteratively.parquet  cpu_csc_multiply_iteratively_metadata.json  cpu_csc_multiply_once.parquet  cpu_csr_multiply_once_metadata.json  gpu_coo_multiply_iteratively.parquet  gpu_coo_multiply_iteratively_metadata.json  gpu_csc_multiply_once_metadata.json  gpu_csr_multiply_iteratively_metadata.json
docs/source/benchmarks/data/matmul_vector_matrix/dairy_cow_cyclic/: cpu_bsr_multiply_iteratively.parquet  cpu_bsr_multiply_once.parquet  cpu_bsr_multiply_once_metadata.json  cpu_csc_multiply_iteratively_metadata.json  cpu_csc_multiply_once.parquet  cpu_csr_multiply_iteratively.parquet  cpu_csr_multiply_iteratively_metadata.json  cpu_csr_multiply_once_metadata.json  gpu_coo_multiply_iteratively_metadata.json  gpu_coo_multiply_once_metadata.json  gpu_csc_multiply_iteratively_metadata.json  gpu_csc_multiply_once.parquet  (+2 more)
docs/source/benchmarks/data/matrices/: random_matrix_medium.npz  random_matrix_small.npz  random_matrix_tiny.npz  tm_without_reincarnation.npz  transition_matrix_cyclic.npz
docs/source/benchmarks/data/memory_footprints/: memory_footprints.parquet
docs/source/notebook/: Out-of-core matrix multiplications.md
src/benchmarks/: abstract.py  arithmetic_cupy.py  arithmetic_numpy.py  arithmetic_scipy.py  arithmetic_vector_matrix.py  arithmic_numpy.py  arithmic_scipy.py  array_assembly_method.py  basic_matrix_info.py  bench.py  build_random_matrix.py  dense_sparse.py  density_change.py  format_conversions.py  format_memory.py  numpy.py  scipy.py  tools.py  visualise_density.py  visualise_matrix.py
src/benchmarks/gpu/: arithmetic_cupy.py
src/benchmarks/notebooks/: arithmetic_vector_matrix.ipynb  format_conversions.ipynb  format_memory.ipynb
src/benchmarks/unused/: abstract.py  arithmetic_numpy.py  arithmetic_scipy.py  arithmetic_tensorflow.py  arithmic_scipy.py  array_assembly_method.py
src/benchmarks/unused/gpu/: assembly_cupy.py
src/chain_simulator/: __about__.py  __init__.py  _assembly.py  _distributed.py  _simulation.py  _utilities.py  abstract.py  assembly.py  implementations.py  simulation.py  utilities.py
tests/: __init__.py  conftest.py  test_abstract.py  test_assembly.py  test_implementations.py  test_simulation.py  test_utilities.py
tests/benchmarks/: test_tools.py
(+30 files in other folders)
