[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "chain-simulator"
version = "1.1.0"
description = "Generic, highly scalable platform for simulating digital twins using Markov chains."
authors = ["Max Nollet <mjh.nollet@student.han.nl>"]
readme = "README.md"
repository = "https://github.com/Bovi-analytics/DigitalCowSimulationPlatform"
packages = [{ include = "chain_simulator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = ">=1.10"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.0"
docformatter = ">=1.5"
mypy = ">=1.1"
pylint = ">=2.17"
pre-commit = ">=3.2"
ruff = ">=0.0.259"

[tool.poetry.group.docs.dependencies]
furo = "^2023.0"
Sphinx = "^6.1"

[tool.poetry.group.security.dependencies]
bandit = "^1.7"
safety = "^2.3"

[tool.poetry.group.tests.dependencies]
pytest = "^7.0"
numpy = "^1.24.2"


[tool.black]
line-length = 79
target-version = ["py310"]


[tool.mypy]
strict = true
plugins = [
    "numpy.typing.mypy_plugin"
]


[tool.pylint.MASTER]
load-plugins = [
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.code_style",
    "pylint.extensions.emptystring",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.for_any_all",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.mccabe",
    "pylint.extensions.docstyle",
    "pylint.extensions.check_elif",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.docparams",
    "pylint.extensions.empty_comment",
    "pylint.extensions.set_membership",
    "pylint.extensions.while_used"
]
max-complexity = 10
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "sphinx"


[tool.ruff]
extend-select = [
    "B",
    "BLE",
    "C4",
    "D",
    "ERA",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "YTT"
]
line-length = 79
show-fixes = true
target-version = "py310"


[tool.bandit]
exclude_dirs = [
    "tests"
]
