[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chain-simulator"
dynamic = ["version"]
description = "Generic, highly scalable platform for simulating digital twins using Markov chains."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
    { name = "Max Nollet", email = "mjh.nollet@student.han.nl" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "scipy>=1.10",
    "typing-extensions>=4.0.1"
]

[project.urls]
Issues = "https://github.com/Bovi-analytics/DigitalCowSimulationPlatform/issues"
Source = "https://github.com/Bovi-analytics/DigitalCowSimulationPlatform"

[tool.hatch.version]
path = "src/chain_simulator/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
]
[tool.hatch.envs.default.scripts]
cov = [
    "test-cov",
    "cov-report",
]
cov-report = [
    "- coverage combine",
    "coverage report",
]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
dependencies = [
    "black>=23.1.0",
    "docformatter>=1.5",
    "mypy>=1.0.0",
    "pylint>=2.17",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
all = [
    "typing",
    "style",
]
fmt = [
    "black {args:.}",
    "docformatter --in-place --recursive {args:src/chain_simulator tests}",
    "ruff --fix {args:src/chain_simulator tests}",
]
style = [
    "ruff {args:src/chain_simulator tests}",
    "pylint {args:src/chain_simulator tests}",
]
typing = "mypy --install-types --non-interactive {args:src/chain_simulator tests}"

[tool.hatch.envs.docs]
dependencies = [
    "furo>=2023.0",
    "Sphinx>=6.1",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.5.1",
    "towncrier>=22.12.0",
]
[tool.hatch.envs.docs.scripts]
api = "sphinx-apidoc -o docs/source/generated/ src/chain_simulator/ -M"
autobuild = "sphinx-autobuild docs/source/ docs/build/html"
build = [
    "api",
    "test",
    "sphinx-build -b html docs/source/ docs/build/html"
]
test = "sphinx-build -b doctest docs/source/ docs/build/html"


[tool.black]
line-length = 79
target-version = ["py310"]


[tool.mypy]
strict = true
plugins = [
    "numpy.typing.mypy_plugin"
]
[[tool.mypy.overrides]]
module = ["scipy.*", "_pytest.*"]
ignore_missing_imports = true


[tool.pylint.MASTER]
disable = ["wrong-import-order"]
load-plugins = [
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.code_style",
    "pylint.extensions.emptystring",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.for_any_all",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.mccabe",
    "pylint.extensions.docstyle",
    "pylint.extensions.check_elif",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.docparams",
    "pylint.extensions.empty_comment",
    "pylint.extensions.set_membership",
    "pylint.extensions.while_used"
]
max-complexity = 10
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "sphinx"


[tool.ruff]
extend-select = [
    "B",
    "BLE",
    "C4",
    "D",
    "ERA",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "YTT"
]
line-length = 79
show-fixes = true
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["S101"]


[tool.bandit]
exclude_dirs = [
    "tests"
]


[tool.towncrier]
directory = "changelog"
filename = "docs/source/changelog.rst"
name = "Chain Simulator"
package = "chain_simulator"
package_dir = "src"
template = "changelog/towncrier_template.rst.jinja"
