[metadata]
name = chain_simulator
version = 1.0.0
url = https://github.com/Bovi-analytics/DigitalCowSimulationPlatform
author = Max Nollet
author_mail = mjh.nollet@student.han.nl
description = Generic, highly scalable platform for simulating digital twins using Markov chains.
long_description = file: README.md

[options]
install_requires =
package_dir=
    =src
packages=find:
python_requires = >=3.10

[options.packages.find]
where=src
