[metadata]
name = chain_simulator
version = 1.0.0
url = https://github.com/Bovi-analytics/DigitalCowSimulationPlatform
author = Max Nollet
author_mail = mjh.nollet@student.han.nl
description = Generic, highly scalable platform for simulating digital twins using Markov chains.
long_description = file: README.md

[options]
install_requires =
package_dir =
	=src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
dev =
	chain_simulator[docs,formatting,security,tests]
	pre-commit==3.2.0
docs =
	furo == 2023.3.23
	sphinx == 6.1.3
formatting =
	black == 22.12.0
	docformatter == 1.5.1
	mypy == 1.1.1
	pylint == 2.17.1
	ruff == 0.0.259
security =
	bandit == 1.7.5
	safety == 2.3.5
tests =
	pytest == 7.2.2
